<resources>
    <string name="app_name">ChatSample</string>

    <string name="welcome_to_elves_app">Welcome to ElvesApp</string>

    <string name="login">Login</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="server_connection_error">Unable to connect to server, please try again later</string>

    <string name="facebook_app_id">148592355949113</string>
    <string name="fb_login_protocol_scheme">fb148592355949113</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
